plugins {
    id 'java'
    id 'jacoco'
    id 'io.freefair.lombok' version '9.2.0'
    id "com.gorylenko.gradle-git-properties" version "2.4.2"
    id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin'
    id 'com.avast.gradle.docker-compose' version '0.17.12'
    id 'io.sentry.jvm.gradle' version '5.12.2'
}

def versions = [
        sentry : '8.28.0'
]

configurations.all {
    // Fix for SNYK-JAVA-COMFASTERXMLJACKSONCORE-15907551 (CVE) - updated to 2.21.2
    // Fix for SNYK-JAVA-TOOLSJACKSONCORE-15907550 (CVE) - updated to 3.1.1
    // Fix for Spring Boot security vulnerabilities SNYK-JAVA-ORGSPRINGFRAMEWORKBOOT-15701836, 15701840 (Authentication Bypass)
    // Fix for Spring Security vulnerability SNYK-JAVA-ORGSPRINGFRAMEWORKSECURITY-15701796 (Cache Containing Sensitive Information)
    // Fix for Spring Framework vulnerability SNYK-JAVA-ORGSPRINGFRAMEWORK-15701845 (Directory Traversal)
    resolutionStrategy {
        force 'com.fasterxml.jackson.core:jackson-core:2.21.2'
        force 'com.fasterxml.jackson.core:jackson-databind:2.21.2'
        force 'tools.jackson.core:jackson-core:3.1.1'
        force 'tools.jackson.core:jackson-databind:3.1.1'
        force 'tools.jackson:jackson-bom:3.1.1'
        force 'org.springframework.boot:spring-boot-actuator:3.5.12'
        force 'org.springframework.boot:spring-boot-actuator-autoconfigure:3.5.12'
        force 'org.springframework.security:spring-security-web:6.5.9'
        force 'org.springframework:spring-webmvc:6.2.17'
    }
}

sourceSets {
    testUtilities {
        java {
            srcDir 'src/testUtilities/java'
        }
        resources {
            srcDir 'src/testUtilities/resources'
        }
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
    test {
        compileClasspath += sourceSets.testUtilities.output
        runtimeClasspath += sourceSets.testUtilities.output
    }
    integrationTest {
        compileClasspath += sourceSets.testUtilities.output
        runtimeClasspath += sourceSets.testUtilities.output
    }
}

configurations {
    testUtilitiesImplementation.extendsFrom testImplementation
    testUtilitiesRuntimeOnly.extendsFrom testRuntimeOnly
}

dockerCompose {
    useComposeFiles = ['../docker-compose.yml']
    // workaround https://github.com/avast/gradle-docker-compose-plugin/issues/435
    def dockerPath = ["/usr/bin/docker", "/usr/local/bin/docker"].find {
        new File(it).exists()
    }
    if (dockerPath) {
        dockerExecutable.set(dockerPath)
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.13"
}

//so that we load properties from gradle properties
task copyFileFromRootProject(type: Copy) {
    from "${rootProject.projectDir}/gradle.properties"
    into 'build/resources/main'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/AccessApp.class'])
        }))
    }
}

dependencyManagement {
    // Fix for SNYK-JAVA-TOOLSJACKSONCORE-15907550 (CVE) - updated to 3.1.1
    imports {
        mavenBom 'tools.jackson:jackson-bom:3.1.1'
    }
    dependencies {
        dependencySet(group: 'io.sentry', version: versions.sentry) {
            entry 'sentry-spring-boot-starter'
            entry 'sentry-logback'
        }
    }
}

// Workaround: Disable gradle-git-properties due to compatibility issues with Java 21+ and newer Gradle
tasks.named('generateGitProperties') {
    enabled = false
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}


dependencies {
    implementation project(':data-access-api')
    implementation project(':data-access-shared')

    // Remove explicit Spring Security and Spring Core versions - let Spring Boot 4 manage them
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude group: 'com.google.code.gson', module: 'gson'
    }
    implementation('org.springframework.boot:spring-boot-starter-webmvc') {
        exclude group: 'com.google.code.gson', module: 'gson'
    }

    //fix https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-15789756
    implementation 'io.netty:netty-codec-http:4.2.12.Final'
    //fix https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-15789758
    implementation 'io.netty:netty-codec-http2:4.2.12.Final'
    //fix https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHETOMCATEMBED-15307781
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.1.52'
    // Fix for SNYK-JAVA-COMFASTERXMLJACKSONCORE-15907551 (CVE) - updated to 2.21.2
    implementation 'com.fasterxml.jackson.core:jackson-core:2.21.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.2'
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2') {
        exclude group: 'tools.jackson.core'
    }
    implementation("org.springframework.boot:spring-boot-starter-flyway:4.0.1")
    implementation("org.flywaydb:flyway-database-postgresql")

    // Source: https://mvnrepository.com/artifact/com.azure.spring/spring-cloud-azure-starter-active-directory
    // Note: Version 7.0.0 may not be compatible with Spring Boot 4, check for updated version
    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:7.0.0'
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'

    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'net.ttddyy.observation:datasource-micrometer-spring-boot:2.2.0'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    implementation 'org.javers:javers-core:7.10.0'

    //aws sdk
    // Source: https://mvnrepository.com/artifact/software.amazon.awssdk/bom
    implementation(platform("software.amazon.awssdk:bom:2.41.7"))
    implementation("software.amazon.awssdk:s3")
    implementation("software.amazon.awssdk:dynamodb")
    implementation("software.amazon.awssdk:dynamodb-enhanced")

    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly "org.flywaydb:flyway-database-postgresql"

    testImplementation 'org.instancio:instancio-junit:5.5.1'
    testImplementation 'net.datafaker:datafaker:2.5.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation "org.testcontainers:testcontainers-junit-jupiter:2.0.1"
    testImplementation 'org.testcontainers:postgresql:1.21.3'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers:3.5.7'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    // https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-4.0-Migration-Guide#test-code
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'

    testImplementation platform('org.testcontainers:testcontainers-bom:1.19.7')
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:localstack'


    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Security fix for SNYK-JAVA-ORGAPACHECOMMONS-10734078 (CVE-2025-48924)
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // Sentry
    implementation platform("io.sentry:sentry-bom:$versions.sentry")
    implementation "io.sentry:sentry-logback:$versions.sentry"
    implementation "io.sentry:sentry-spring-boot-4:$versions.sentry"
}
configurations {
    // expose the runtimeClasspath to the integrationTest task
    integrationTestRuntimeClasspath {
        extendsFrom runtimeClasspath
    }
}